# ida-patcher.Mewski

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  release.yml
dependencies/submodules/: CMakeLists.txt
examples/: README.md  ida-patcher.json
examples/lumen/: README.md  ida-patcher.json
examples/template/: README.md  ida-patcher.json
src/: pattern.cpp  pattern.hpp  platform.cpp  platform.hpp  plugin.cpp
tests/: CMakeLists.txt  test_pattern.cpp  test_pattern_matching.cpp  test_pattern_parsing.cpp  test_pattern_patching.cpp
